Fix scrollbar corner color

--- a/src/app.css
+++ b/src/app.css
@@ -57,5 +57,5 @@ button {
 }
 
 ::-webkit-scrollbar-corner {
-	background: 27272b;
+	background: #19191b;
 }
